# pdf-yaml-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
docs/: CLAUDE_REVIEW_REPORT.md  CODE_REVIEW_REPORT.md  STRUCTURE.md
examples/: README.md
scripts/: file_queue_worker.py  pdf_metrics_collector.py  queue_init.py  queue_monitor.py  rebuild_done_set.py  separate_hwp_done.py  structure_check.sh
src/pdf_yaml_pipeline/: README.md  SOLUTIONS.md  __init__.py  four_stage_pipeline.py  orchestrator.py  yaml_runner.py
src/pdf_yaml_pipeline/converters/: __init__.py  format_utils.py  jsonl_converter.py  yaml_converter.py
src/pdf_yaml_pipeline/deduplication/: deduplicator.py
src/pdf_yaml_pipeline/distill/: __init__.py  quality_rules.py  quality_validator.py
src/pdf_yaml_pipeline/notifications/: __init__.py  discord_notifier.py
src/pdf_yaml_pipeline/ocr/: __init__.py  paddle_to_yaml.py
src/pdf_yaml_pipeline/parsers/: __init__.py  base.py  chunk_parser.py  config_schema.py  cpu_pdf_parser.py  docling_yaml_adapter.py  factory.py  hwp_parser.py  hwp_yaml_adapter.py  hwpx_yaml_adapter.py  multi_parser.py  pdf_normalizer.py  pdf_validator.py  safe_parser.py  special_clause_parser.py  unified_parser.py
src/pdf_yaml_pipeline/qa/: __init__.py  config.py  merge_engine.py  qa_pipeline.py  qa_prompt.py  scope_guard.py  scope_validator.py
src/pdf_yaml_pipeline/quality/: __init__.py  auto_validator.py  autofix.py  cell_reliability.py  channel_classifier.py  channel_config.py  channel_keywords.py  channel_monitor.py  channel_review_queue.py  content_analyzer.py  ensemble_classifier.py  metadata_extractor.py  models.py  quality_gate.py  reprocess_strategy.py  table_quality.py  table_structure.py  threshold_tuner.py
src/pdf_yaml_pipeline/rag/: __init__.py  chunk_builder.py  context_assembler.py  distillation.py  doc_classifier.py  faiss_indexer.py  prompt_templates.py  query_classifier.py  retriever.py
src/pdf_yaml_pipeline/security/: __init__.py  hwp_encryption.py
src/pdf_yaml_pipeline/triage/: __init__.py  pdf_classifier.py
src/pdf_yaml_pipeline/utils/: __init__.py  doc_classifier.py  splitter.py  timeout_calculator.py
src/pipeline/: SOLUTIONS.md  __init__.py  four_stage_pipeline.py  yaml_runner.py
tests/: conftest.py  test_deduplicator.py  test_format_utils.py  test_hwp_rag_wrappers.py  test_lock_operations.py  test_pdf_parsing_improvements.py  test_quality_imports.py  test_yaml_converter.py
(+30 files in other folders)
